fix: fix icon, gap and margin in card employee

--- a/src/components/Collapse/styles.module.scss
+++ b/src/components/Collapse/styles.module.scss
@@ -28,6 +28,9 @@
       position: absolute;
       right: 50px;
       top: 16px;
+      &:hover {
+        color: #a9a9b1;
+      }
     }
   }
 
